tests/ui/consts/const-unwrap.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-unwrap.rs:6:18
   |
LL | const BAR: i32 = Option::<i32>::None.unwrap();
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: called `Option::unwrap()` on a `None` value

error[E0080]: evaluation of constant value failed
  --> $DIR/const-unwrap.rs:10:18
   |
LL | const BAZ: i32 = Option::<i32>::None.expect("absolutely not!");
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: absolutely not!

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
